[gd_scene load_steps=2 format=2]

[ext_resource path="res://atvlistas.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Button_lista_carregada" type="Button" parent="."]
margin_left = 69.0
margin_top = 54.0
margin_right = 181.0
margin_bottom = 112.0
text = "Clique aqui e veja a lista"

[node name="Aqui_aparece_lista" type="Label" parent="."]
margin_left = 317.0
margin_top = 60.0
margin_right = 529.0
margin_bottom = 109.0
rect_pivot_offset = Vector2( -580, -45 )

[node name="Button_lista_vazia" type="Button" parent="."]
margin_left = 70.0
margin_top = 134.0
margin_right = 182.0
margin_bottom = 192.0
text = "Clique aqui e preencha a lista"

[node name="Aqui_aparece_lista2" type="Label" parent="."]
margin_left = 501.0
margin_top = 143.0
margin_right = 713.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( -580, -45 )

[node name="Button3_texto_pronto" type="Button" parent="."]
margin_left = 73.0
margin_top = 219.0
margin_right = 185.0
margin_bottom = 277.0
text = "Clique aqui e veja um texto"

[node name="Aqui_aparece_lista3" type="Label" parent="."]
margin_left = 292.0
margin_top = 222.0
margin_right = 504.0
margin_bottom = 271.0
rect_pivot_offset = Vector2( -580, -45 )

[node name="Button4" type="Button" parent="."]
margin_left = 72.0
margin_top = 320.0
margin_right = 184.0
margin_bottom = 378.0

[node name="Aqui_aparece_lista4" type="Label" parent="."]
margin_left = 247.0
margin_top = 327.0
margin_right = 459.0
margin_bottom = 376.0
rect_pivot_offset = Vector2( -580, -45 )

[node name="Adicione_lista" type="LineEdit" parent="."]
margin_left = 304.0
margin_top = 135.0
margin_right = 450.0
margin_bottom = 198.0

[connection signal="pressed" from="Button_lista_carregada" to="." method="_on_Button_lista_carregada_pressed"]
[connection signal="pressed" from="Button_lista_vazia" to="." method="_on_Button_lista_vazia_pressed"]
[connection signal="pressed" from="Button3_texto_pronto" to="." method="_on_Button3_texto_pronto_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
